check changes of header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid full-w">
     <!-- contentContainer -->
     <div class="row staticNavHeader">
         <div class="col-sm-2 col-lg-2">
@@ -169,53 +169,10 @@
                 </span>
             </div>
         </div>
-        <div class="w_100">
-            <h1 class="custom-heading animated zoomInLeft"><span>STUVATION</span></h1>
-            <p class="custom-ss animated fadeInRight">S t u d e n t <span>+</span> i n n o v a t i o n</p>
-            <p class="arrows"><i class="fa fa-arrow-circle-left" (click)="decreaseSlider()"></i>&nbsp;&nbsp;
-                <span>{{sliderValue}}</span>&nbsp;&nbsp;<i class="fa fa-arrow-circle-right" (click)="increaseSlider()"></i></p>
-            <div class="container-fluid" *ngIf="firstSlide">
-                <div class="row ">
-                    <div class="img-lft col-md-6 col-sm-12 animated fadeInLeft">
-                        <img src="assets/images/tef-stuvation.png" />
-                    </div>
-                    <div class="col-md-5 col-sm-12 animated fadeInRight">
-                        <div class="content-ryt">
-                            <h4 class="custom-ss-content"> Execute &amp; Express</h4>
-                            <p> Your innovation or Academic project We connect experts, student partners , Academisions
-                                &amp; sponsers</p>
-                            <h3 class="custom-s-content"> <span>" </span>IT'S NOT ABOUT IDEAS.<br> ITS ABOUT MAKING
-                                IDEAS
-                                HAPPEN</h3>
 
-                        </div>
-                    </div>
-                    <div class="col-md-1 col-sm-0"></div>
-                </div>
-            </div>
 
-            <div class="container-fluid" *ngIf="secondSlide">
-                <div class="row ">
-                    <div class="img-lft col-md-6 col-sm-12 animated fadeInLeft">
-                        <img src="assets/images/slide2.png" />
-                    </div>
-                    <div class="col-md-5 col-sm-12 animated fadeInRight">
-                        <div class="content-ryt">
-                            <p> An initative plateform launched by The Engineers Factory through which students
-                                can get help from co-students, Academicians ,Industrial Experts &amp;
-                                sponsers to execute yourbrilliant innovative thoughts and
-                                academics projucts thus creating a path from being a student to the
-                                next Aryabhata.</p>
-                            <h3 class="custom-s-content"> <span>" </span>IT'S NOT ABOUT IDEAS.<br> ITS ABOUT MAKING
-                                IDEAS
-                                HAPPEN</h3>
 
-                        </div>
-                    </div>
-                    <div class="col-md-1 col-sm-0"></div>
-                </div>
-            </div>
-        </div>
+       
 
     </div>
 
@@ -224,7 +181,7 @@
 
 
 
-    <div class="row" style="margin-top:1em;">
+    <div class="row" style="margin-top:-1px;">
         <div class="col-1">
 
         </div>
