--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,6 +34,9 @@
     margin-top: -1em;
     z-index: 10;
   }
+  .staticNavHeader .nav1{
+    margin-top: -5.5em;
+  }
   .regform{
     max-width : 70% !important;
   }
@@ -163,10 +166,13 @@ margin-left: 25%;
 
 
 .staticNavHeader{
-  background-color: #19578A;
-    top: 0; /* Position the navbar at the top of the page */
-    /* width: 1367.280px; */
-    z-index: 100;
+  top: 0;
+  z-index: 100;
+  background: url(/assets/images/headerbg.png) no-repeat fixed center center;
+  background-size: cover;
+  height: auto;
+  overflow: hidden;
+  padding: 12px 0px;
 }
 
 .nav-link{
@@ -183,52 +189,9 @@ margin-left: 25%;
 
 
 /***********newcode***************/
-.img-lft img{
-  width:auto;
-}
-.content-ryt p {
-  font-weight: 500;
-  color: white;
-  font-size: 20px;
-}
-.custom-ss-content{
-  font-family: 'Charm', cursive;
-    font-size: 35px;
-    margin: 40px 0px;
-    color: #f8ec6a;
-}
-.content-ryt h3{
-  text-align: right!important;
-  color: #f8ec6a;
-  font-size: 28px;
-  margin-top: 20px;
-  margin-right: 30px;
-}
-.w_100{
-  text-align: center;
-  width: 100%!important;
-  position: relative;
-  /* top: -200px; */
-}
-.custom-ss{
-  color: white;
-    font-size: 25px;
-    font-weight: 500;
-    font-style: italic;
-}
-h1.custom-heading{
-  font-size: 80px;
-    text-shadow: 2px 2px #0000;
-    font-weight: bold;
-    margin-bottom: 0px;
-}
-.custom-heading span{
-  background: linear-gradient(to right, #c7f265 20%, #5a67f4 65%, #5a67f4 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    filter: drop-shadow(-2px 4px 1px #000);
+.full-w{
+  padding: 0!important;
+  overflow: hidden;
 }
 
 /*Strip the ul of padding and list styling*/
@@ -609,8 +572,11 @@ cursor: pointer;
 
 /************mediaquaries*******/
 @media screen and (min-width: 320px) and (max-width: 567px) {
+
   .phone {
     display: block;   
+    left: 8px;
+    position: relative;
 }
 .sub-drop li a{
   height: 20px!important;
