--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -304,7 +304,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>CREATE A TECH ARTICLE</h4>
                 </span>
@@ -430,7 +430,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>CREATE STUVATION</h4>
                 </span>
@@ -619,7 +619,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>CREATE ENGSHIP</h4>
                 </span>
@@ -853,7 +853,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>Engship Terms and Conditions</h4>
                 </span>
@@ -878,7 +878,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>CREATE Academic Project</h4>
                 </span>
@@ -1063,7 +1063,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>CREATE A TECH CONNECT</h4>
                 </span>
@@ -1473,7 +1473,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>CREATE A TECH TALK</h4>
                 </span>
@@ -1673,11 +1673,11 @@
 
 <!-- Modal -->
 <div id="loginModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog ">
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>LOGIN</h4>
                 </span>
@@ -1704,13 +1704,10 @@
                     <div style="width: 100%; text-align: center; align-items: center">
                         <button style="width: 100%;" type="submit" [disabled]="!loginForm.valid"
                             class="btn btn-primary">LOGIN</button>
-                        <br /> OR
-                        <br />
-
+                       
                     </div>
-
                 </form>
-                <div ngbDropdown class="nav-item dropdown">
+                <!-- <div ngbDropdown class="nav-item dropdown">
                     <a id="signupDropdown2" style="margin-left: 0;" ngbDropdownToggle
                         class="nav-link dropdown-toggle btn btn-primary" data-toggle="dropdown" href="#" role="button"
                         aria-haspopup="true" aria-expanded="false">SIGNUP</a>
@@ -1725,16 +1722,14 @@
                                     (click)="closeLoginBox()">ENGINEER</a>
                             </li>
                         </ul>
-
-
                     </div>
-                </div>
+                </div> -->
+                
             </div>
             <!--<div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>-->
         </div>
-
     </div>
 </div>
 
@@ -1743,7 +1738,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>LOGIN ALERT</h4>
                 </span>
@@ -1768,7 +1763,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>Stuvation Details</h4>
                 </span>
@@ -1799,7 +1794,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>TechTeach Details</h4>
                 </span>
@@ -1836,7 +1831,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>TechTalk Details</h4>
                 </span>
@@ -1869,7 +1864,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>Academic Project Details</h4>
                 </span>
@@ -1901,7 +1896,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>ProzectMe Details</h4>
                 </span>
@@ -1934,7 +1929,7 @@
 
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>Engship Details</h4>
                 </span>
@@ -1962,11 +1957,12 @@
 
 <!-- Modal -->
 <div id="engineerRegistrationModal" class="modal fade" role="dialog">
-    <div class="modal-dialog regform">
+    <div class="modal-dialog regform logn_modl">
 
         <!-- Modal content-->
+        <div class="bg-blk">
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>Join as Engineer</h4>
                 </span>
@@ -2151,15 +2147,17 @@
         </div>
 
     </div>
+    </div>
 </div>
 
 <!-- Modal -->
 <div id="studentRegistrationModal" class="modal fade" role="dialog">
-    <div class="modal-dialog regform">
+    <div class="modal-dialog regform logn_modl">
 
+        <div class="bg-blk">
         <!-- Modal content-->
         <div class="modal-content">
-            <div class="modal-header" style="background-color: #07567F; text-align: center; align-items: center;">
+            <div class="modal-header" style="background-color: #36099f; text-align: center; align-items: center;">
                 <span style="text-align: center; color: white; width: 100%;">
                     <h4>Join as Student</h4>
                 </span>
@@ -2311,7 +2309,7 @@
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>-->
         </div>
-
+    </div>
     </div>
 </div>
 
