--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,7 +87,7 @@
                         <!-- <span></span>
                         <span></span>
                         <span></span> -->
-                        <img class="toggle-menu-icon" src="../assets/images/menu-icon.png" (click)="openmenu()">
+                        <img class="toggle-menu-icon" src="../assets/images/menu-icon.png">
 
                         <ul id="menu" class="animated slideInLeft" *ngIf="navbarOpen">
                             <li><a (click)="hidemenu()" class="close_btn">x</a></li>
