--- a/src/app/tech-article/tech-article.component.css
+++ b/src/app/tech-article/tech-article.component.css
@@ -60,6 +60,58 @@
     font-size: 19px;
     border-radius: 4px;
 }
+.buttonarticle{
+margin: auto;
+display: block;
+padding: 8px;
+border: none;
+cursor: pointer;
+margin-top: 45px;
+height: 41px;
+    padding: 0 11px;
+    font-size: 66px;
+    font-size: 17px;
+    margin-top: 19px;
+    border-radius: 33px;
+    color: #ffff;
+    background: rgba(51,9,158,1);
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(51,9,158,1)), color-stop(47%, rgba(51,9,158,1)), color-stop(100%, rgba(192,39,230,1)));
+    background: linear-gradient(to right, rgba(51,9,158,1) 0%, rgba(51,9,158,1) 47%, rgba(192,39,230,1) 100%);
+}
+
+.filter-divs
+{
+    margin-top: 80px;
+}
+
+.tech-bank-filters h2{
+color: #3e0aa5;
+    margin-top: 11px;
+}
+.radio-btns{
+background: #19578a;
+width: 20%;
+padding: 8px;
+border-radius: 48px;
+padding-top: 0px;
+padding-bottom: 0px;
+cursor: pointer;
+}
+
+.fa-check{
+    position: absolute;
+    left: 17px;
+    top: 4px;
+    color: white;
+}
+
+.card-articles{
+    border: 1px solid #3e0aa5;
+    margin-bottom: 15px;
+    box-shadow: 5px 9px 13px -4px rgba(0, 0, 0, .3) !important;
+    background-color: #19578a59;
+    /* margin-left: 0%; */
+}
 @media only screen and (max-width: 768px) {
 .buttonarticle{
     height: 18%;
