--- a/src/styles.css
+++ b/src/styles.css
@@ -276,7 +276,7 @@ cursor: pointer !important;
     display: block;
     width: 59px;
     border-radius: 36px;
-    font-size: 37px !important;
+    font-size: 27px !important;
     color: #7c12d0;
 }
 
@@ -345,6 +345,11 @@ cursor: pointer !important;
 .custom-ss-our-event-menu-block img{
     height: auto;
     width: 100px !important;
+}
+.filter-input{
+border: 2px solid #19578a !important;
+margin-left: 10% !important;
+width: 85%;
 }
 
       /***************mediaquaries*********/
